# Shotline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  shotline.toml
.claude/: settings.json
.claude/skills/setup/: SKILL.md
.claude/skills/submit/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  update-lensfun-db.yml
data/lensfun-db/: .sha256  compact-canon.xml  compact-leica.xml  compact-nikon.xml  compact-ricoh.xml  compact-sony.xml  mil-canon.xml  mil-fujifilm.xml  mil-leica.xml  mil-nikon.xml  mil-panasonic.xml  mil-samyang.xml  mil-sigma.xml  mil-sony.xml  misc.xml  slr-canon.xml  slr-nikon.xml  slr-samyang.xml  slr-tamron.xml  slr-tokina.xml
docs/: color-science-primer.md  data-structures.md  image-data-flow.md  lens-correction.md  plan.md  raw-loading.md
src/shotline/: __init__.py  cli.py  config.py  image.py  io.py  models.py  pipeline.py  processor.py
src/shotline/processors/: __init__.py  auto_crop.py  color_grade.py  content_remove.py  denoise.py  exposure_adjust.py  horizon.py  lens_correct.py  raw_develop.py  super_res.py  tone_map.py  white_balance.py
tests/: conftest.py  test_cli.py  test_image.py  test_io.py  test_lens_correct.py  test_pipeline.py  test_processor.py
